metrique/tests/ui/fail/missing_flatten_attribute.stderr
error[E0277]: the trait bound `ChildMetricsEntry: Value` is not satisfied
  --> tests/ui/fail/missing_flatten_attribute.rs:13:1
   |
13 | #[metrics(rename_all = "PascalCase")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Value` is not implemented for `ChildMetricsEntry`
...
19 |     downstream_operation: Slot<ChildMetrics>,
   |     -------------------- required by a bound introduced by this call
   |
   = help: the following other types implement trait `Value`:
             &T
             Arc<T>
             Box<T>
             Cow<'_, T>
             Duration
             FormattedValue<'_, V, VF, L>
             Option<T>
             String
           and $N others
   = note: required for `Option<ChildMetricsEntry>` to implement `Value`
note: required by a bound in `value`
  --> $WORKSPACE/metrique-writer-core/src/entry/mod.rs
   |
   |     fn value(&mut self, name: impl Into<Cow<'a, str>>, value: &(impl Value + ?Sized));
   |                                                                      ^^^^^ required by this bound in `EntryWriter::value`
